force-app/main/default/objects/Survey__c/Survey__c.object-meta.xml
<CustomObject>
    <label>Survey</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Survey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>