force-app/main/default/objects/Survey__c/fields/a1_10_how_U_rate_ur_ability_to_meet_SOP__c.field-meta.xml
<CustomField>
    <fullName>a1_10_how_U_rate_ur_ability_to_meet_SOP__c</fullName>
    <label>1-10, how U rate ur ability to meet SOP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>