force-app/main/default/objects/Survey__c/fields/a1_How_would_u_best_desc_your_pharmacy__c.field-meta.xml
<CustomField>
    <fullName>a1_How_would_u_best_desc_your_pharmacy__c</fullName>
    <label>Pharmacy Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Located within a grocery store</fullName>
            </value>
            <value>
                <fullName>Located within a department store</fullName>
            </value>
            <value>
                <fullName>Stand-alone pharmacy with a large retail space</fullName>
            </value>
            <value>
                <fullName>Stand-alone pharmacy with a small retail space</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>