force-app/main/default/objects/Survey__c/fields/a2a_Pharmacy_offer_off_site_vaccination__c.field-meta.xml
<CustomField>
    <fullName>a2a_Pharmacy_offer_off_site_vaccination__c</fullName>
    <label>2a. Pharmacy offer off-site vaccination?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>