force-app/main/default/objects/Survey__c/fields/Are_you_exhausted_in_the_morning_work__c.field-meta.xml
<CustomField>
    <fullName>Are_you_exhausted_in_the_morning_work__c</fullName>
    <label>Are you exhausted in the morning work?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Suvery_Responses_Set</valueSetName>
    </valueSet>
</CustomField>