force-app/main/default/objects/Survey__c/fields/b1_10_how_u_rate_care_at_your_pharmacy__c.field-meta.xml
<CustomField>
    <fullName>b1_10_how_u_rate_care_at_your_pharmacy__c</fullName>
    <label>1-10, how u rate care at your pharmacy?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>