force-app/main/default/objects/Survey__c/fields/b1_b_If_Other_Please_Specify__c.field-meta.xml
<CustomField>
    <fullName>b1_b_If_Other_Please_Specify__c</fullName>
    <label>1.b If Other, Please Specify</label>
    <type>TextArea</type>
</CustomField>