force-app/main/default/objects/Survey__c/fields/b2b_If_yes_dates_and_total_vaccinations__c.field-meta.xml
<CustomField>
    <fullName>b2b_If_yes_dates_and_total_vaccinations__c</fullName>
    <label>2b. If yes, dates and total vaccinations</label>
    <type>TextArea</type>
</CustomField>