force-app/main/default/objects/Survey__c/fields/Dispensing_technology_ur_pharmacy_use__c.field-meta.xml
<CustomField>
    <fullName>Dispensing_technology_ur_pharmacy_use__c</fullName>
    <label>Dispensing technology ur pharmacy use?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Counting technology (e.g., Accu-Count)</fullName>
            </value>
            <value>
                <fullName>Packaging technology (e.g. Blistassist, PACMED, Parata)</fullName>
            </value>
            <value>
                <fullName>Preparation technology (e.g., Methameasure)</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>