force-app/main/default/objects/Survey__c/fields/Do_you_feel_burnt_out_because_of_work__c.field-meta.xml
<CustomField>
    <fullName>Do_you_feel_burnt_out_because_of_work__c</fullName>
    <label>Do you feel burnt out because of work?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Suvery_Responses_Set</valueSetName>
    </valueSet>
</CustomField>