force-app/main/default/objects/Survey__c/fields/Do_you_feel_worn_out_at_end_of_the_work__c.field-meta.xml
<CustomField>
    <fullName>Do_you_feel_worn_out_at_end_of_the_work__c</fullName>
    <label>Do you feel worn out at end of the work?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Suvery_Responses_Set</valueSetName>
    </valueSet>
</CustomField>