force-app/main/default/objects/Survey__c/fields/Does_your_work_frustrate_you__c.field-meta.xml
<CustomField>
    <fullName>Does_your_work_frustrate_you__c</fullName>
    <label>Does your work frustrate you?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Suvery_Responses_Set</valueSetName>
    </valueSet>
</CustomField>