force-app/main/default/objects/Survey__c/fields/ExistingRefillPrescriptionRefills_11__c.field-meta.xml
<CustomField>
    <fullName>ExistingRefillPrescriptionRefills_11__c</fullName>
    <label>Refill Prescription</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>