force-app/main/default/objects/Survey__c/fields/FridayEndTime_5b__c.field-meta.xml
<CustomField>
    <fullName>FridayEndTime_5b__c</fullName>
    <label>Friday End Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>