force-app/main/default/objects/Survey__c/fields/FridayStartTime_5a__c.field-meta.xml
<CustomField>
    <fullName>FridayStartTime_5a__c</fullName>
    <label>Friday Start Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>