force-app/main/default/objects/Survey__c/fields/Hour_Pharmacy_Technician_in_CPPCC_Clinic__c.field-meta.xml
<CustomField>
    <fullName>Hour_Pharmacy_Technician_in_CPPCC_Clinic__c</fullName>
    <label>Pharmacy Technician Overlap CPPCC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>