force-app/main/default/objects/Survey__c/fields/Hours_of_pharmacist_dispensary_each_week__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_pharmacist_dispensary_each_week__c</fullName>
    <label>Pharmacist Overlap hrs/wk in Dispensary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>