force-app/main/default/objects/Survey__c/fields/Hours_pharmacy_technician_in_dispensary__c.field-meta.xml
<CustomField>
    <fullName>Hours_pharmacy_technician_in_dispensary__c</fullName>
    <inlineHelpText>In hrs/week</inlineHelpText>
    <label>Pharmacy Technician Overlap Dispensary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>