force-app/main/default/objects/Survey__c/fields/How_often_are_you_emotionally_exhausted__c.field-meta.xml
<CustomField>
    <fullName>How_often_are_you_emotionally_exhausted__c</fullName>
    <label>How often are you emotionally exhausted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Suvery_Responses_Set</valueSetName>
    </valueSet>
</CustomField>