force-app/main/default/objects/Survey__c/fields/How_often_can_you_meet_the_Drug_Admin__c.field-meta.xml
<CustomField>
    <fullName>How_often_can_you_meet_the_Drug_Admin__c</fullName>
    <label>Drug Administration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Suvery_Responses_Set</valueSetName>
    </valueSet>
</CustomField>