force-app/main/default/objects/Survey__c/fields/How_often_can_you_meet_these_Quality_Std__c.field-meta.xml
<CustomField>
    <fullName>How_often_can_you_meet_these_Quality_Std__c</fullName>
    <label>Continuous Quality Assurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Suvery_Responses_Set</valueSetName>
    </valueSet>
</CustomField>