force-app/main/default/objects/Survey__c/fields/How_often_do_you_feel_tired__c.field-meta.xml
<CustomField>
    <fullName>How_often_do_you_feel_tired__c</fullName>
    <label>How often do you feel tired?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Suvery_Responses_Set</valueSetName>
    </valueSet>
</CustomField>