force-app/main/default/objects/Survey__c/fields/How_often_U_meet_Non_Sterile_Compounding__c.field-meta.xml
<CustomField>
    <fullName>How_often_U_meet_Non_Sterile_Compounding__c</fullName>
    <label>Non-Sterile Compounding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Suvery_Responses_Set</valueSetName>
    </valueSet>
</CustomField>