force-app/main/default/objects/Survey__c/fields/How_often_you_I_can_t_take_it_anymore__c.field-meta.xml
<CustomField>
    <fullName>How_often_you_I_can_t_take_it_anymore__c</fullName>
    <label>How often you “I can’t take it anymore”?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Suvery_Responses_Set</valueSetName>
    </valueSet>
</CustomField>