force-app/main/default/objects/Survey__c/fields/How_often_you_meet_Pharmacy_standards__c.field-meta.xml
<CustomField>
    <fullName>How_often_you_meet_Pharmacy_standards__c</fullName>
    <label>General Pharmacy Practice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Suvery_Responses_Set</valueSetName>
    </valueSet>
</CustomField>