force-app/main/default/objects/Survey__c/fields/How_often_you_meet_the_stds_Opioid__c.field-meta.xml
<CustomField>
    <fullName>How_often_you_meet_the_stds_Opioid__c</fullName>
    <label>Drug Therapy for the Treatment of Opioid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Suvery_Responses_Set</valueSetName>
    </valueSet>
</CustomField>