force-app/main/default/objects/Survey__c/fields/Intern_10b__c.field-meta.xml
<CustomField>
    <fullName>Intern_10b__c</fullName>
    <label>Intern</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>