force-app/main/default/objects/Survey__c/fields/Is_your_work_emotionally_exhausting__c.field-meta.xml
<CustomField>
    <fullName>Is_your_work_emotionally_exhausting__c</fullName>
    <label>Is your work emotionally exhausting?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Suvery_Responses_Set</valueSetName>
    </valueSet>
</CustomField>