force-app/main/default/objects/Survey__c/fields/MondayEndTime_5b__c.field-meta.xml
<CustomField>
    <fullName>MondayEndTime_5b__c</fullName>
    <label>Monday End Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>