force-app/main/default/objects/Survey__c/fields/MondayStartTime_5a__c.field-meta.xml
<CustomField>
    <fullName>MondayStartTime_5a__c</fullName>
    <label>Monday Start Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>