force-app/main/default/objects/Survey__c/fields/New_prescription_NOT_Using_13__c.field-meta.xml
<CustomField>
    <fullName>New_prescription_NOT_Using_13__c</fullName>
    <label>New Prescription % NOT Using Technology</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>