force-app/main/default/objects/Survey__c/fields/New_Prescription_On_Site_14__c.field-meta.xml
<CustomField>
    <fullName>New_Prescription_On_Site_14__c</fullName>
    <label>New Prescription % Onsite</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>