force-app/main/default/objects/Survey__c/fields/New_Refill_Prescription_Using_13__c.field-meta.xml
<CustomField>
    <fullName>New_Refill_Prescription_Using_13__c</fullName>
    <label>New Refill Prescription % Using</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>