force-app/main/default/objects/Survey__c/fields/NewPrescriptionDrugtothePatient_11__c.field-meta.xml
<CustomField>
    <fullName>NewPrescriptionDrugtothePatient_11__c</fullName>
    <label>New prescription</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>