force-app/main/default/objects/Survey__c/fields/NewrefillprescriptionCentralFill_14__c.field-meta.xml
<CustomField>
    <fullName>NewrefillprescriptionCentralFill_14__c</fullName>
    <label>New Refill Prescription % Central Fill</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>