force-app/main/default/objects/Survey__c/fields/NewRefillPrescriptionNewRefills_11__c.field-meta.xml
<CustomField>
    <fullName>NewRefillPrescriptionNewRefills_11__c</fullName>
    <label>New refill prescription (new refills)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>