force-app/main/default/objects/Survey__c/fields/Other_6a__c.field-meta.xml
<CustomField>
    <fullName>Other_6a__c</fullName>
    <label>Other</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>