force-app/main/default/objects/Survey__c/fields/Other_please_specify_12a__c.field-meta.xml
<CustomField>
    <fullName>Other_please_specify_12a__c</fullName>
    <label>Other (please specify)</label>
    <type>TextArea</type>
</CustomField>