force-app/main/default/objects/Survey__c/fields/Pharmacist_7a__c.field-meta.xml
<CustomField>
    <fullName>Pharmacist_7a__c</fullName>
    <label>Pharmacist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>