force-app/main/default/objects/Survey__c/fields/Pharmacy_Hours__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Hours__c</fullName>
    <label>Pharmacy Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pharmacy_Hours</valueSetName>
    </valueSet>
</CustomField>