force-app/main/default/objects/Survey__c/fields/Pharmacy_located_within_a_CPPC_Clinic__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_located_within_a_CPPC_Clinic__c</fullName>
    <label>Pharmacy located within a CPPC Clinic?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>