force-app/main/default/objects/Survey__c/fields/Pharmacy_Name__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Name__c</fullName>
    <description>Used for StaffWise Report</description>
    <formula>Renewal__r.Account.Name</formula>
    <label>Pharmacy Name</label>
    <type>Text</type>
</CustomField>