force-app/main/default/objects/Survey__c/fields/PharmacyAssistantCashiersDispensary_7a__c.field-meta.xml
<CustomField>
    <fullName>PharmacyAssistantCashiersDispensary_7a__c</fullName>
    <label>Pharmacy Assistant (dispensary cashiers)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>