force-app/main/default/objects/Survey__c/fields/PharmacyAssistantDispensaryCashiers_6b__c.field-meta.xml
<CustomField>
    <fullName>PharmacyAssistantDispensaryCashiers_6b__c</fullName>
    <label>Pharmacy Assistant (dispensary cashiers)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>