force-app/main/default/objects/Survey__c/fields/PharmacyAssistantIncludesCashiers_10b__c.field-meta.xml
<CustomField>
    <fullName>PharmacyAssistantIncludesCashiers_10b__c</fullName>
    <label>Pharmacy Assistant (includes cashiers)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>