force-app/main/default/objects/Survey__c/fields/PharmacyAssistantIncludesCashiers_6a__c.field-meta.xml
<CustomField>
    <fullName>PharmacyAssistantIncludesCashiers_6a__c</fullName>
    <label>Pharmacy Assistant (including cashiers)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>