force-app/main/default/objects/Survey__c/fields/PharmacyManager_10a__c.field-meta.xml
<CustomField>
    <fullName>PharmacyManager_10a__c</fullName>
    <label>Pharmacy Manager</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>