force-app/main/default/objects/Survey__c/fields/PharmacyManager_6b__c.field-meta.xml
<CustomField>
    <fullName>PharmacyManager_6b__c</fullName>
    <label>Pharmacy Manager</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>