force-app/main/default/objects/Survey__c/fields/PharmacyTechnician_6a__c.field-meta.xml
<CustomField>
    <fullName>PharmacyTechnician_6a__c</fullName>
    <label>Pharmacy Technician</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>