force-app/main/default/objects/Survey__c/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>