force-app/main/default/objects/Survey__c/fields/SaturdayEndTime_5a__c.field-meta.xml
<CustomField>
    <fullName>SaturdayEndTime_5a__c</fullName>
    <label>Saturday End Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>