force-app/main/default/objects/Survey__c/fields/SaturdayStartTime_5a__c.field-meta.xml
<CustomField>
    <fullName>SaturdayStartTime_5a__c</fullName>
    <label>Saturday Start Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>